RESOLVED FIXED124398
Incorrectly placed NETWORK_PROCESS guard in NetworkConnectionToWebProcess.cpp
https://bugs.webkit.org/show_bug.cgi?id=124398
Summary Incorrectly placed NETWORK_PROCESS guard in NetworkConnectionToWebProcess.cpp
Peter Molnar
Reported 2013-11-15 00:53:42 PST
Incorrectly placed NETWORK_PROCESS guard in NetworkConnectionToWebProcess.cpp
Attachments
Proposed patch (1.32 KB, patch)
2013-11-15 00:56 PST, Peter Molnar
no flags
Peter Molnar
Comment 1 2013-11-15 00:56:46 PST
Created attachment 217022 [details] Proposed patch
Csaba Osztrogonác
Comment 2 2013-11-15 04:02:22 PST
LGTM, but it would be better if a WK2 owner give you the final r+.
WebKit Commit Bot
Comment 3 2013-11-15 08:13:21 PST
Comment on attachment 217022 [details] Proposed patch Clearing flags on attachment: 217022 Committed r159338: <http://trac.webkit.org/changeset/159338>
WebKit Commit Bot
Comment 4 2013-11-15 08:13:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.