Fixed incorrectly placed NETWORK_PROCESS guard in NetworkConnectionToWebProcess.cpp https://bugs.webkit.org/show_bug.cgi?id=124398

Patch by Peter Molnar <pmolnar.u-szeged@partner.samsung.com> on 2013-11-15
Reviewed by Brady Eidson.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:

Canonical link: https://commits.webkit.org/142605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159338 268f45cc-cd09-0410-ab3c-d52691b4dbfc